# property-based-testing-workshop

./: .gitmodules  Dockerfile  README.md  build.sh  run.sh
01/: CMakeLists.txt  README.md  build.sh  run.sh
02/: CMakeLists.txt  README.md  build.sh  main.cc  run.sh
03/: CMakeLists.txt  build.sh  main.cc  run.sh
